src/ui/radarr_ui/downloads/snapshots/managarr__ui__radarr_ui__downloads__downloads_ui_tests__tests__downloads_ui_renders_empty_downloads.snap
---
source: src/ui/radarr_ui/downloads/downloads_ui_tests.rs
expression: output
---
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
